--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <header class="header" id="head">
         <nav class="header__nav">
             <ul class="menu">
-                <a href="../index.html"><img src="../multimedia/logo.png" alt="Logo-Isabella"></a>
-                <li class="menu__li"><i class="fa-sharp fa-solid fa-bag-shopping" id="verCarrito"></i></li>
+                <a href="index.html"><img src="multimedia/logo.png" alt="Logo-Isabella"></a>
+                <li class="menu__li"><i class="fa-sharp fa-solid fa-bag-shopping" id="verCarrito"></i><span id="cantidadCarrito" class="cantidadCarrito"></span></li>
             </ul>
         </nav>
     </header>
