Tercera pre entrega del proyecto

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     </footer>
     <!-- FIN DEL FOOTER -->
     <script src="js/productos.js"></script>
+    <script src="js/carrito.js"></script>
     <script src="js/app.js"></script>
 </body>
 
