Correcciones al carrito

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <nav class="header__nav">
             <ul class="menu">
                 <a href="index.html"><img src="multimedia/logo.png" alt="Logo-Isabella"></a>
-                <li class="menu__li"><i class="fa-sharp fa-solid fa-bag-shopping" id="verCarrito"></i><span id="cantidadCarrito" class="cantidadCarrito"></span></li>
+                <li class="menu__li"><i class="fa-sharp fa-solid fa-bag-shopping" id="verCarrito"></i><span
+                        id="cantidadCarrito" class="cantidadCarrito"></span></li>
             </ul>
         </nav>
     </header>
@@ -43,11 +44,12 @@
 
         <section id="tienda" class="tienda">
             <article class="tienda__productos" id="tiendaProductos">
-                
+
             </article>
         </section>
-
-        <div class="carritoModal" id="carritoModal"></div>
+        <section class="secCarrito">
+            <div class="carritoModal" id="carritoModal"></div>
+        </section>
     </main>
 
     <!-- INICIO DEL FOOTER -->
