Entrega proyecto final

--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
             <ul class="footer__ul">
                 <li class="footer__li"> <a href="#"> HOME </a> </li>
                 <li class="footer__li"> <a class="link-active" href="#head"> TIENDA </a> </li>
-                <li class="footer__li"> <a href="#"> NOSOTROS</li>
+                <li class="footer__li"> <a href="#"> NOSOTROS</a></li>
             </ul>
         </div>
 
         <div class="footer__pagos">
             <h3 class="pagos__text">MEDIOS DE PAGO</h3>
             <div class="pagos__grid">
-                <img src="../multimedia/tarjetas/visa.png" alt="">
-                <img src="../multimedia/tarjetas/mastercard.png" alt="">
-                <img src="../multimedia/tarjetas/amex.png" alt="">
-                <img src="../multimedia/tarjetas/mercadopago.png" alt="">
-                <img src="../multimedia/tarjetas/pagofacil.png" alt="">
-                <img src="../multimedia/tarjetas/rapipago.png" alt="">
-                <img src="../multimedia/tarjetas/cabal.png" alt="">
-                <img src="../multimedia/tarjetas/diners.png" alt="">
+                <img src="multimedia/tarjetas/visa.png" alt="">
+                <img src="multimedia/tarjetas/mastercard.png" alt="">
+                <img src="multimedia/tarjetas/amex.png" alt="">
+                <img src="multimedia/tarjetas/mercadopago.png" alt="">
+                <img src="multimedia/tarjetas/pagofacil.png" alt="">
+                <img src="multimedia/tarjetas/rapipago.png" alt="">
+                <img src="multimedia/tarjetas/cabal.png" alt="">
+                <img src="multimedia/tarjetas/diners.png" alt="">
             </div>
         </div>
         <div class="footer__contacto">
@@ -95,9 +95,11 @@
 
     </footer>
     <!-- FIN DEL FOOTER -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/productos.js"></script>
     <script src="js/carrito.js"></script>
     <script src="js/app.js"></script>
+
 </body>
 
 </html>
